edit/edit.css
/* ... */
#usw-link-info dd[data-usw="name"] {
  font-weight: bold;
}
#usw-progress {
  position: relative;
  vertical-align: top;
}
#usw-progress .success,
#usw-progress .unchanged {
  font-size: 150%;
  font-weight: bold;
  position: absolute;
  margin-left: .25em;
}
#usw-progress .success {
  margin-top: -.25em;
}
#usw-progress .success::after {
  content: '\2713'; /* checkmark */
}
#usw-progress .unchanged::after {
  content: '=';
}
#usw-progress .error {
  display: block;
  margin-top: .5em;
  color: red;
}
#usw-progress .error + div {
  font-size: smaller;
}
#usw-progress .lds-spinner {
  transform: scale(0.125);
  transform-origin: 0 10px;
}
/* options */
#options [type="number"] {
  width: 3.5em;
  text-align: left;
  padding-left: .25em;
}
#options .option.aligned > label {
  padding: .1rem .25rem 0 0;
  vertical-align: middle;
}
/* footer */
.usercss #footer {
  display: block;
  margin-top: 1em;
  margin-bottom: .5em;
}
#lint:not([open]) + #footer {
  margin-top: 4em;
}
/************ section editor ***********/
.CodeMirror-vscrollbar,
.CodeMirror-hscrollbar {
  box-shadow: none !important;
  pointer-events: auto !important; /* FF bug */
}
.sectioned .section {
  margin: 0 0.7rem;
  padding: 1rem;
}
.sectioned .section:not(:first-child) {
  border-top: 2px solid var(--c80);
}
.add-section:after {
  content: attr(short-text);
}
#sections > div:only-of-type .add-section:after {
  content: attr(long-text);
}
#sections > div:only-of-type .remove-section {
  display: none;
}
.edit-actions {
  display: flex;
  flex-wrap: wrap;
}
.edit-actions button {
  margin-right: .2rem;
}
#sections {
  counter-reset: codebox;
}
#sections > .section:not(.removed) > label {
  padding: 0 0 4px 0;
  display: inline-block;
  font-size: 13px;
  animation: 2s highlight;
  animation-play-state: paused;
  animation-direction: reverse;
  animation-fill-mode: both;
}
#sections > .section > label::after {
  counter-increment: codebox;
  content: counter(codebox) ": " attr(data-text);
  margin-left: 0.25rem;
}
.usercss .applies-to {
  border-width: 1px 0;
}
.usercss .applies-to > label::before {
  content: attr(data-index) ":";
  margin-right: 0.25rem;
  font-size: 12px;
}
.code-label[data-text] {
  font-weight: bold;
}
#toc {
  counter-reset: codelabel;
}
#toc li {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  cursor: pointer;
}
#toc li.current:not(:only-child) {
  font-weight: bold;
}
#toc li[tabindex="-1"] {
  opacity: .25;
  pointer-events: none;
}
#toc li:hover {
  background-color: hsla(180, 50%, 36%, .2);
}
#toc li[tabindex="0"]::before {
  counter-increment: codelabel;
  content: counter(codelabel) ": ";
}
.section:only-of-type .move-section-up,
.section:only-of-type .move-section-down {
  display: none;
}
.section .CodeMirror {
  margin-bottom: .5em;
  box-sizing: border-box;
}
/* deleted section */
.deleted-section {
  margin: 0;
}
.section .deleted-section {
  display: none;
}
.section.removed .deleted-section {
  display: block;
}
.section.removed .code-label,
.section.removed .applies-to,
.section.removed .edit-actions,
.section.removed .CodeMirror {
  display: none;
}
.move-section-down:after,
.move-section-up:after {
  content: "";
  display: block;
  border: var(--side) solid transparent;
  --side: .4em;
}
.move-section-up:after {
  border-bottom: calc(var(--side) * 1.3) solid currentColor;
  margin: -50% 0 0 0;
}
.move-section-down:after {
  border-top: calc(var(--side) * 1.3) solid currentColor;
  margin: 0 0 -60% 0;
}
/* code */
.code {
  height: 10rem;
  width: 40rem;
}
.resize-grip-enabled .CodeMirror-scroll {
  height: auto !important;;
  position: absolute !important;
  top: 0;
  left: 0;
  right: 0;
  bottom: 6px; /* resize-grip height */
}
.resize-grip-enabled .CodeMirror-vscrollbar {
  margin-bottom: 7px; /* make space for resize-grip */
}
.resize-grip-enabled .CodeMirror-hscrollbar {
  bottom: 7px; /* make space for resize-grip */
}
.resize-grip-enabled .CodeMirror-scrollbar-filler {
  bottom: 7px; /* make space for resize-grip */
}
@keyframes highlight {
  from {
    background-color: #ff9;
  }
  to {
    background-color: inherit;
  }
}
@keyframes fadein {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
.resize-grip {
  position: absolute;
  display: block;
  height: 6px;
  content: "";
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 9;
  cursor: n-resize;
  background-color: inherit;
  border-top-width: 1px;
  border-top-style: solid;
  border-top-color: inherit;
}
.resize-grip:after {
  content: "";
  bottom: 2px;
  left: 0;
  right: 0;
  margin: 0 8px;
  display: block;
  position: absolute;
  border-top-width: 2px;
  border-top-style: dotted;
  border-top-color: inherit;
}
/* applies-to */
.applies-to {
  display: flex;
  align-items: flex-start;
  min-height: 30px;
  flex-wrap: wrap;
}
.applies-to.error {
  background-color: #f002;
  border-color: #f008;
}
.applies-to label {
  font-size: 0;
  padding: 0;
  line-height: var(--input-height);
}
.sectioned .applies-to label {
  margin-left: -24px;
  position: absolute;
}
.compact-layout .applies-to label {
  display: none;
}
.compact-layout .applies-to[data-all] label {
  position: static;
  display: inline;
  margin: 0 6px 0 -4px;
}
.applies-to ul {
  flex: auto;
  flex-grow: 1;
  margin: 0;
  padding: 0;
}
.applies-to li {
  display: flex;
  flex-wrap: wrap;
  list-style-type: none;
  align-items: center;
  margin-bottom: .5em;
}
.applies-to li.applies-to-everything {
  align-items: unset;
  line-height: var(--input-height);
}
.applies-to li > input {
  min-height: 1.4rem;
}
.applies-to .select-resizer {
  margin-right: .5em;
}
.applies-to li .add-applies-to:first-child {
  margin-left: 1rem;
}
.applies-to li .applies-value-wrapper {
  flex-grow: 1;
  display: flex;
}
.applies-to[data-all] .applies-value-wrapper {
  display: none;
}
.applies-to li .applies-value {
  flex-grow: 1;
  padding-left: 0.2rem;
}
.applies-to img {
  vertical-align: bottom;
}
/* ... */

